--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,12 @@
 steps:
+- name: 'alpine'
+  entrypoint: 'sh'  
+  args: 
+  - '-c'
+  - | 
+      echo "***********************"
+      echo "$BRANCH_NAME"
+      echo "***********************"
 - name: 'gcr.io/cloud-builders/go'
   args: ['fmt']
   env: ['PROJECT_ROOT=$REPO_NAME']
