--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,13 +8,10 @@ steps:
       echo "$BRANCH_NAME"
       echo "***********************"
 - name: 'gcr.io/cloud-builders/go'
-  args: ['fmt']
+  args: ['fmt', './...']
   env: ['PROJECT_ROOT=$REPO_NAME']
 - name: 'gcr.io/cloud-builders/go'
-  args: ['vet']
-  env: ['PROJECT_ROOT=$REPO_NAME']
-- name: 'gcr.io/cloud-builders/go'
-  args: ['test']
+  args: ['vet', './...']
   env: ['PROJECT_ROOT=$REPO_NAME']
 - name: 'gcr.io/cloud-builders/go'
   args: ['install']
